[gd_scene load_steps=23 format=3 uid="uid://bgka367nf0rp5"]

[ext_resource type="FontFile" uid="uid://b5henpscy4dmg" path="res://Fonts/Monocraft.otf" id="1_qtwa3"]
[ext_resource type="Texture2D" uid="uid://c68fv3v1rn3on" path="res://Pictures/logo.png" id="2_hehp6"]
[ext_resource type="Script" uid="uid://d1t7dkqbc6f3c" path="res://Scripts/logo.gd" id="3_nr4m4"]
[ext_resource type="Texture2D" uid="uid://iqtdu4wpm137" path="res://Pictures/portals.png" id="4_hehp6"]

[sub_resource type="Gradient" id="Gradient_oyf75"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a51mf"]
gradient = SubResource("Gradient_oyf75")
width = 1

[sub_resource type="LabelSettings" id="LabelSettings_oyf75"]
font = ExtResource("1_qtwa3")
font_size = 61

[sub_resource type="AtlasTexture" id="AtlasTexture_nr4m4"]
atlas = ExtResource("4_hehp6")
region = Rect2(0, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkcpb"]
atlas = ExtResource("4_hehp6")
region = Rect2(8, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12p1f"]
atlas = ExtResource("4_hehp6")
region = Rect2(16, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2if7t"]
atlas = ExtResource("4_hehp6")
region = Rect2(24, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lkeu"]
atlas = ExtResource("4_hehp6")
region = Rect2(32, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_recj7"]
atlas = ExtResource("4_hehp6")
region = Rect2(0, 32, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffmyi"]
atlas = ExtResource("4_hehp6")
region = Rect2(8, 32, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjhfd"]
atlas = ExtResource("4_hehp6")
region = Rect2(16, 32, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whppa"]
atlas = ExtResource("4_hehp6")
region = Rect2(24, 32, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxu7q"]
atlas = ExtResource("4_hehp6")
region = Rect2(32, 32, 8, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lfvdr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr4m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkcpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12p1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2if7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lkeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_recj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffmyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjhfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whppa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxu7q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_76xge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../WhoIsAuthor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1673, 769)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_laf7e"]
resource_name = "anim"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../WhoIsAuthor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.96667),
"transitions": PackedFloat32Array(1, 5.09824),
"update": 0,
"values": [Vector2(750, -750), Vector2(750, 1250)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333, 1.86667),
"transitions": PackedFloat32Array(1, 0.466516),
"update": 0,
"values": [0.0, 0.565487]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.166667, 1.86667),
"transitions": PackedFloat32Array(1, 3.605),
"update": 0,
"values": [0.0, 0.282743]
}

[sub_resource type="Animation" id="Animation_qtwa3"]
resource_name = "end"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oyf75"]
_data = {
&"RESET": SubResource("Animation_76xge"),
&"anim": SubResource("Animation_laf7e"),
&"end": SubResource("Animation_qtwa3")
}

[node name="Menu" type="Node2D"]

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(960.5, 489.5)
scale = Vector2(2433, 1207)
texture = SubResource("GradientTexture1D_a51mf")

[node name="WhoIsAuthor" type="Label" parent="."]
offset_right = 732.0
offset_bottom = 62.0
text = "данмотиве презентс"
label_settings = SubResource("LabelSettings_oyf75")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portal1" type="AnimatedSprite2D" parent="."]
position = Vector2(1673, 769)
rotation = -1.5708
scale = Vector2(20, 20)
sprite_frames = SubResource("SpriteFrames_lfvdr")
frame = 3

[node name="Portal2" type="AnimatedSprite2D" parent="."]
position = Vector2(1673, 769)
rotation = -1.5708
scale = Vector2(20, 20)
sprite_frames = SubResource("SpriteFrames_lfvdr")
frame = 9

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(1673, 769)
scale = Vector2(20, 20)
texture = ExtResource("2_hehp6")
script = ExtResource("3_nr4m4")

[node name="AnimationLogo" type="AnimationPlayer" parent="Logo"]
libraries = {
&"": SubResource("AnimationLibrary_oyf75")
}
autoplay = "anim"

[node name="ToMenu" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="ToMenu" to="Logo" method="_TOMenu"]
